--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,19 @@ contourpy==1.1.0
 cycler==0.11.0
 fonttools==4.41.0
 japanize-matplotlib==1.1.3
+joblib==1.3.2
 kiwisolver==1.4.4
 matplotlib==3.7.2
 mecab-python3==1.0.6
 numpy==1.25.1
 packaging==23.1
+pandas==2.1.1
 Pillow==10.0.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2023.3.post1
+scikit-learn==1.3.1
+scipy==1.11.3
 six==1.16.0
+threadpoolctl==3.2.0
+tzdata==2023.3
